added gif to powspecwalkthru

--- a/PowSpecWalkthru.ipynb
+++ b/PowSpecWalkthru.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9a36c66ac87d0295ec34e480f346e6853ce88557b3fb85991ae799356bc05664"
+  "signature": "sha256:3d6a241a52dec74cdea69dcdd878205a501370f3bedc7be178c00b6daf10193e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,6 +20,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "<img src=\"https://upload.wikimedia.org/wikipedia/commons/3/37/Shallow_water_waves.gif\"/>\n",
+      "\n",
+      "**Waves look cool.** But did you know that by just looking at surface waves (like those above), you can figure out what's underneath?\n",
+      "\n",
       "Consider the following problem: You have a sequence of images of an oscillating surface. These oscillations occur both on various timescales and lengthscales on the surface of interest. How can we decompose the complex motion of the surface in order to determine the different frequencies and wave lengths that are strongest in the object of interest?\n",
       "\n",
       "For this lesson, we will use images of the Sun, the surface of which can be thought of as a fluid that is constantly oscillating. These images have been taken every 45 seconds for approximately 4.5 hours, and we will use this time-series to attempt to uncover the frequencies of interest that are present. Once we establish how to apply these techniques to our images, we'll discuss consraints to this technique and dataset, how these techniques can be used in other situations, and where else such techniques could come in handy."
@@ -551,7 +555,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This frequency analysis can then be used to tell us a great deal about the internal structure and dynamics of stars. At all wavenumbers, the 3mHz peak is visible. At smaller wavenumbers, however, there appears to be some possibly significant lumpiness (aka structure) within the 3 mHz peak. This data has relatively low time resolution, however, so it makes detecting variation other than the 3 mHz peak very difficult. \n",
+      "This frequency analysis can then be used to tell us a great deal about the internal structure and dynamics of stars. At all wavenumbers, the 3mHz peak is visible. At smaller wavenumbers, however, there appears to be some possibly significant lumpiness (aka structure) within the 3 mHz peak. This data has relatively low time resolution, however, so it makes detecting variation other than the 3 mHz peak very difficult. This can be seen more clearly in a comparable lesson that I've done with other data, also available on my GitHub.\n",
       "\n",
       "The strongest frequency and spacing between frequencies is directly dependent on the density of the oscillating material. We use this to infer the stage of stellar evolution of the star, and can use this information for more precise constraints on stellar density, age, and therefore temperature, size, and mass.\n",
       "\n",
