--- a/powspec-lesson.ipynb
+++ b/powspec-lesson.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:851a6f86a266bb2ab9ef12be1a3a2ebe55a3161c7f0152a5a68a1ac34f97ee0b"
+  "signature": "sha256:4486c0f62408c7f448e89f88dbae253b72bfd0f21a1b2535363e5806f87eab46"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,8 +22,16 @@
      "source": [
       "Consider the following problem: You have a sequence of images of an oscillating surface. These oscillations occur both on various timescales and lengthscales on the surface of interest. How can we decompose the complex motion of the surface in order to determine the different frequencies and wave lengths that are strongest in the object of interest?\n",
       "\n",
-      "For this lesson, we will use images of the Sun, the surface of which can be thought of as a fluid that is constantly oscillating. These images have been taken every 10 seconds for approximately 8 hours, and we will use this time-series to attempt to uncover the frequencies of interest that are present. Once we establish how to apply these techniques to our images, we'll discuss how these techniques can be used in other situations, and where else such techniques could come in handy."
+      "For this lesson, we will use images of the Sun, the surface of which can be thought of as a fluid that is constantly oscillating. These images have been taken every 45 seconds for approximately 4.5 hours, and we will use this time-series to attempt to uncover the frequencies of interest that are present. Once we establish how to apply these techniques to our images, we'll discuss how these techniques can be used in other situations, and where else such techniques could come in handy."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -423,7 +431,7 @@
       "dnuy = round(float(2*np.pi / (Ny*deltay)),6)\n",
       "\n",
       "print round(dt,6), dnux, dnuy\n",
-      "dnu = np.sqrt(dnux**2+dnuy**2)\n",
+      "dnu = np.sqrt(dnux**2+dnuy**2) #adding x and y in quadrature\n",
       "dnu = round(dnu,4)\n",
       "print dnu"
      ],
