fixed bugs in powspecwalkthru

--- a/wavelettest-lesson.ipynb
+++ b/wavelettest-lesson.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6d6213c69b2a9ba5ebc47cc9377b4d7bc16b17046a7f99463df982d2e9ddc39d"
+  "signature": "sha256:a4b756fda03935dce5d38b638dd0edb3a500b4ae1321f14816b27ce0f8839013"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,6 +14,13 @@
      "metadata": {},
      "source": [
       "Introduction to Scientific Programming in Python: Performing a Least Squares Fit to Data"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"http://www.schoolsobservatory.org.uk/sites/default/files/astro/trans_ani.gif\">"
      ]
     },
     {
@@ -35,297 +42,10 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
      "input": [
-      "import glob\n",
-      "from astropy.io import fits\n",
       "import numpy as np\n",
-      "from scipy.interpolate import interp1d\n",
-      "from scipy.optimize import curve_fit\n",
+      "from scipy.optimize import leastsq, curve_fit\n",
       "\n",
-      "\n",
-      "#Plot signal in 2x2 pixel region over time.\n",
-      "Kimnames = sorted(glob.glob('*Kdop.fits'))\n",
-      "Naimnames = sorted(glob.glob('*Nadop.fits'))\n",
-      "Feimnames = sorted(glob.glob('*Fedop.fits'))\n",
-      "print Kimnames[0:3], Naimnames[0:3], Feimnames[0:3]\n",
-      "Nfe = len(Feimnames)\n",
-      "N = len(Kimnames)\n",
-      "Kimlist = np.zeros((N,1024,1024))\n",
-      "Naimlist = np.zeros((N,1024,1024))\n",
-      "Feimlist = np.zeros((Nfe,1024,1024))\n",
-      "Kpixel = np.zeros(N)\n",
-      "Napixel = np.zeros(N)\n",
-      "Fepixel = np.zeros(Nfe)\n",
-      "for i in range(N):\n",
-      "    #print fits.open(imnames[i])[0].data[0]\n",
-      "    Kimlist[i] = fits.open(Kimnames[i])[0].data\n",
-      "    Kpixel[i] = np.sum(Kimlist[i][392:394,488:490])\n",
-      "    Naimlist[i] = fits.open(Naimnames[i])[0].data\n",
-      "    Napixel[i] = np.sum(Naimlist[i][392:394,488:490])\n",
-      "    \n",
-      "#print Kpixel, Napixel\n",
-      "\n",
-      "for i in range(Nfe):\n",
-      "    Feimlist[i] = fits.open(Feimnames[i])[0].data\n",
-      "    Fepixel[i] = np.sum(Feimlist[i][392:394,488:490])\n",
-      "\n",
-      "#account for linear ramping with least squares fit\n",
-      "tsec = np.linspace(0,len(Kpixel), len(Kpixel))*5\n",
-      "A = np.vstack([tsec,np.ones(len(tsec))]).T\n",
-      "Km, Kc = np.linalg.lstsq(A, Kpixel)[0]\n",
-      "Kpixelcorr = np.zeros_like(Kpixel)\n",
-      "Nam, Nac = np.linalg.lstsq(A, Napixel)[0]\n",
-      "Napixelcorr = np.zeros_like(Napixel)\n",
-      "for i in range(len(Kpixel)):\n",
-      "    Kpixelcorr[i] = Kpixel[i] - (Km*tsec[i]+Kc)\n",
-      "    Napixelcorr[i] = Napixel[i] - (Nam*tsec[i]+Nac)\n",
-      "\n",
-      "Kpixel = Kpixelcorr\n",
-      "Napixel = Napixelcorr\n",
-      "\n",
-      "tfe = np.linspace(0,len(Fepixel), len(Fepixel))*45 + 12 #account for TAI/UTC difference: 1st pic at 45s - 34s offset = 12s\n",
-      "A = np.vstack([tfe,np.ones(len(tfe))]).T\n",
-      "Fem, Fec = np.linalg.lstsq(A, Fepixel)[0]\n",
-      "Fepixelcorr = np.zeros_like(Fepixel)\n",
-      "for i in range(len(Fepixel)):\n",
-      "    Fepixelcorr[i] = Fepixel[i] - (Fem*tfe[i]+Fec)\n",
-      "\n",
-      "Fepixel = Fepixelcorr\n",
-      "\n",
-      "\n",
-      "plt.plot(tsec, Kpixel)\n",
-      "plt.xlabel('Time (s)')\n",
-      "plt.ylabel('Flux (arbitrary units)')\n",
-      "#plt.title('K 2x2 pixels')\n",
-      "fig = plt.gcf()\n",
-      "fig.savefig('kpixel.png')\n",
-      "plt.show()\n",
-      "plt.plot(tsec, Napixel)\n",
-      "plt.xlabel('Time (s)')\n",
-      "plt.ylabel('Flux (arbitrary units)')\n",
-      "#plt.title('Na 2x2 pixels')\n",
-      "fig = plt.gcf()\n",
-      "fig.savefig('napixel.png')\n",
-      "plt.show()\n",
-      "plt.plot(tfe, Fepixel)\n",
-      "plt.title('Fe 2x2 pixels')\n",
-      "fig = plt.gcf()\n",
-      "fig.savefig('fepixel.png')\n",
-      "plt.show()\n",
-      "\n",
-      "#multiply by trig factor at edges to transition smoothly to 0\n",
-      "for i in range(len(Kpixel)):\n",
-      "    if i < 150:\n",
-      "        Kpixel[i] = Kpixel[i] * np.sin(np.pi*i/300)**2\n",
-      "        Napixel[i] = Napixel[i] * np.sin(np.pi*i/300)**2\n",
-      "    elif len(Kpixel)-150 < i < len(Kpixel):\n",
-      "        Kpixel[i] = Kpixel[i] * np.cos(np.pi*(i-(len(Kpixel)-150))/300)\n",
-      "        Napixel[i] = Napixel[i] * np.cos(np.pi*(i-(len(Napixel)-150))/300)\n",
-      "        \n",
-      "for i in range(len(Fepixel)):\n",
-      "    if i < 15:\n",
-      "        Fepixel[i] = Fepixel[i] * np.sin(np.pi*i/30)**2\n",
-      "    elif len(Fepixel)-15 < i < len(Fepixel):\n",
-      "        Fepixel[i] = Fepixel[i] * np.cos(np.pi*(i-(len(Fepixel)-15))/30)\n",
-      "        \n",
-      "        \n",
-      "#Use cubic spline interpolation to make Fepixel array same length\n",
-      "Feinterp = interp1d(tfe, Fepixel, kind='cubic', bounds_error=False, fill_value=0.0)(tsec)\n",
-      "        \n",
-      "plt.plot(tfe,Fepixel)\n",
-      "plt.plot(tsec,Feinterp)\n",
-      "plt.show()\n",
-      "    \n",
-      "#pad arrays\n",
-      "Kpixel = np.pad(Kpixel, (152, 152), 'constant', constant_values=(0,0))\n",
-      "Napixel = np.pad(Napixel, (152, 152), 'constant', constant_values=(0,0))\n",
-      "Fepixel = np.pad(Feinterp, (152, 152), 'constant', constant_values=(0,0))\n",
-      "\n",
-      "#FFT\n",
-      "Kpixelfft = np.fft.fft(Kpixel)\n",
-      "Napixelfft = np.fft.fft(Napixel)\n",
-      "Fepixelfft = np.fft.fft(Fepixel)\n",
-      "\n",
-      "#Use cubic spline interpolation \n",
-      "knacompconj = Kpixelfft * np.conj(Napixelfft)\n",
-      "fekcompconj = Fepixelfft * np.conj(Kpixelfft)\n",
-      "fenacompconj = Fepixelfft * np.conj(Napixelfft)\n",
-      "\n",
-      "#plot real and imaginary parts of complex conjugate FFT in Fourier space\n",
-      "\n",
-      "# make frequency axis\n",
-      "dnu = 1./(len(knacompconj)*5.)\n",
-      "print dnu\n",
-      "freq = np.linspace(0,len(knacompconj)*dnu,len(knacompconj))\n",
-      "\n",
-      "#Gaussian filter: also plot in Fourier space\n",
-      "Gfilter = np.zeros_like(knacompconj)\n",
-      "mu = 0.003 # based one visual inspection of function--how to do this smarter?\n",
-      "sig = 0.0004\n",
-      "print len(freq), len(Gfilter)\n",
-      "for i in range(len(freq)):\n",
-      "    Gfilter[i] = (np.exp(-(freq[i]-mu)**2./(2.*sig**2.))+np.exp(-(freq[i]-((len(knacompconj)*dnu)-mu))**2/(2*sig**2)))\n",
-      "\n",
-      "#Plot Gaussian filter\n",
-      "    \n",
-      "knacompconj = knacompconj * Gfilter\n",
-      "fekcompconj = fekcompconj * Gfilter\n",
-      "fenacompconj = fenacompconj * Gfilter\n",
-      "\n",
-      "knaifft = np.fft.ifft(knacompconj)\n",
-      "fekifft = np.fft.ifft(fekcompconj)\n",
-      "fenaifft = np.fft.ifft(fenacompconj)\n",
-      "\n",
-      "#rearrange ifft arrays to have proper time lags\n",
-      "knaifft = np.append(knaifft[len(knaifft)/2+1:], knaifft[:len(knaifft)/2+1])\n",
-      "fekifft = np.append(fekifft[len(fekifft)/2+1:], fekifft[:len(fekifft)/2+1])\n",
-      "fenaifft = np.append(fenaifft[len(fenaifft)/2+1:], fenaifft[:len(fenaifft)/2+1])\n",
-      "\n",
-      "times = np.linspace(-len(Kpixel)/2,len(Kpixel)/2,len(Kpixel))*5+2.5\n",
-      "\n",
-      "plt.plot(times,knaifft) \n",
-      "plt.xlabel('Time lag (s)')\n",
-      "plt.ylabel('Flux (arbitrary units)')\n",
-      "plt.title('K to Na pixel wavelet')\n",
-      "fig3 = plt.gcf()\n",
-      "fig3.savefig('knapixelwavelet.png')\n",
-      "plt.show()\n",
-      "plt.plot(times,fekifft) \n",
-      "plt.xlabel('Time lag (s)')\n",
-      "plt.ylabel('Flux (arbitrary units)')\n",
-      "plt.title('Fe to K pixel wavelet')\n",
-      "fig3 = plt.gcf()\n",
-      "fig3.savefig('fekpixelwavelet.png')\n",
-      "plt.show()\n",
-      "plt.plot(times,fenaifft) \n",
-      "plt.xlabel('Time lag (s)')\n",
-      "plt.ylabel('Flux (arbitrary units)')\n",
-      "plt.title('Fe to Na pixel wavelet')\n",
-      "fig3 = plt.gcf()\n",
-      "fig3.savefig('fenapixelwavelet.png')\n",
-      "plt.show()\n",
-      "\n",
-      "#Define times of interest\n",
-      "kna_index = np.argmax(knaifft)\n",
-      "fek_index = np.argmax(fekifft)\n",
-      "fena_index = np.argmax(fenaifft)\n",
-      "#boundary condition\n",
-      "if kna_index < windowsize:\n",
-      "    kna_index = windowsize\n",
-      "if fek_index < windowsize:\n",
-      "    fek_index = windowsize\n",
-      "if fena_index < windowsize:\n",
-      "    fena_index = windowsize\n",
-      "        \n",
-      "windowsize = 200 #*5 = time window of interest\n",
-      "knatimes = times[kna_index-windowsize:kna_index+windowsize]\n",
-      "fektimes = times[fek_index-windowsize:fek_index+windowsize]\n",
-      "fenatimes = times[fena_index-windowsize:fena_index+windowsize]\n",
-      "\n",
-      "#Create mathematical model\n",
-      "#p = A, omega, deltaomega, Tg, Tp\n",
-      "\n",
-      "def func(t,par1,par2,par3,par4,par5):\n",
-      "    return (par1**2*(2*np.pi*par3)/np.sqrt(8*np.pi))*np.exp(-(2*np.pi*par3)**2*(t - par4)**2/8)*np.cos(2*np.pi*par2*(t-par5))\n",
-      "\n",
-      "p0 = [1000, 0.003, 0.0004, 300, 20] #initial guess of parameters\n",
-      "\n",
-      "#Make least squares fit of model to data signals\n",
-      "pkna,success = curve_fit(func, knatimes, np.real(knaifft[kna_index-windowsize:kna_index+windowsize]), p0)\n",
-      "        \n",
-      "#plot data and fit together\n",
-      "plt.plot(knatimes, func(knatimes, pkna[0], pkna[1], pkna[2], pkna[3], pkna[4]), 'r', knatimes, knaifft[kna_index-windowsize:kna_index+windowsize], 'b')\n",
-      "plt.legend(('model','data'))\n",
-      "plt.xlabel('Time lag (s)')\n",
-      "plt.ylabel('Flux (arbitrary units)')\n",
-      "plt.title('K/Na wavelet fit')\n",
-      "fig = plt.gcf()\n",
-      "fig.savefig('knapixmodel.png')\n",
-      "plt.show()\n",
-      "print(\"\"\"K/Na pixel wavelet\n",
-      "        A: {0}\n",
-      "        omega: {1} Hz\n",
-      "        deltaomega: {2} Hz\n",
-      "        Tgroup: {3} s\n",
-      "        Tphase: {4} s\n",
-      "        Successful fit? (1 if yes.) {5}\n",
-      "\"\"\".format(pkna[0],pkna[1],pkna[2],pkna[3],pkna[4], success))\n",
-      "\n",
-      "pfek,success = curve_fit(func, fektimes, np.real(fekifft[fek_index-windowsize:fek_index+windowsize]), p0)\n",
-      "\n",
-      "#plot data and fit together\n",
-      "plt.plot(fektimes, func(fektimes, pfek[0],pfek[1],pfek[2],pfek[3],pfek[4]), 'r', fektimes, fekifft[fek_index-windowsize:fek_index+windowsize], 'b')\n",
-      "plt.legend(('model','data'))\n",
-      "plt.xlabel('Time lag (s)')\n",
-      "plt.ylabel('Flux (arbitrary units)')\n",
-      "plt.title('Fe/K wavelet fit')\n",
-      "fig = plt.gcf()\n",
-      "fig.savefig('fekpixmodel.png')\n",
-      "plt.show()\n",
-      "print(\"\"\"Fe/K pixel wavelet\n",
-      "        A: {0}\n",
-      "        omega: {1} Hz\n",
-      "        deltaomega: {2} Hz\n",
-      "        Tgroup: {3} s\n",
-      "        Tphase: {4} s\n",
-      "        Successful fit? (1 if yes.) {5}\n",
-      "\"\"\".format(pfek[0],pfek[1],pfek[2],pfek[3],pfek[4], success))\n",
-      "\n",
-      "pfena,success = curve_fit(func, fenatimes, np.real(fenaifft[fena_index-windowsize:fena_index+windowsize]), p0)\n",
-      "\n",
-      "#plot data and fit together\n",
-      "plt.plot(fenatimes, func(fenatimes,pfena[0],pfena[1],pfena[2],pfena[3],pfena[4]), 'r', fenatimes, fenaifft[fena_index-windowsize:fena_index+windowsize], 'b')\n",
-      "plt.legend(('model','data'))\n",
-      "plt.xlabel('Time lag (s)')\n",
-      "plt.ylabel('Flux (arbitrary units)')\n",
-      "plt.title('Fe/Na wavelet fit')\n",
-      "fig = plt.gcf()\n",
-      "fig.savefig('fenapixmodel.png')\n",
-      "plt.show()\n",
-      "print(\"\"\"Fe/Na pixel wavelet\n",
-      "        A: {0}\n",
-      "        omega: {1} Hz\n",
-      "        deltaomega: {2} Hz\n",
-      "        Tgroup: {3} s\n",
-      "        Tphase: {4} s\n",
-      "        Successful fit? (1 if yes.) {5}\n",
-      "\"\"\".format(pfena[0],pfena[1],pfena[2],pfena[3],pfena[4], success))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "['18_00_00Kdop.fits', '18_00_05Kdop.fits', '18_00_10Kdop.fits'] ['18_00_00Nadop.fits', '18_00_05Nadop.fits', '18_00_10Nadop.fits'] ['20140804_180045Fedop.fits', '20140804_180130Fedop.fits', '20140804_180215Fedop.fits']\n"
-       ]
-      },
-      {
-       "ename": "KeyboardInterrupt",
-       "evalue": "",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-1-fe9a8e679e0a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;31m#print fits.open(imnames[i])[0].data[0]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0mKimlist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mKimnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m     \u001b[0mKpixel\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mKimlist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m392\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m394\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m488\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m490\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mNaimlist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mNaimnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-       ]
-      }
-     ],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
       "func = lambda p, t: (p[0]**2*(2*np.pi*p[2])/np.sqrt(8*np.pi))*np.exp(-(2*np.pi*p[2])**2*(t - p[3])**2/8)*np.cos(2*np.pi*p[1]*(t-p[4]))\n",
       "errfunc = lambda p, t, y: func(p,t) - y\n",
       "p0 = [1000000, 0.004, 0.01, 1000, 450] #initial guess of parameters\n",
@@ -338,8 +58,8 @@
       "plt.plot(testimes,testwave)\n",
       "\n",
       "#Make least squares fit of model to fake data signals\n",
-      "from scipy.optimize import leastsq\n",
       "p1,success = leastsq(errfunc, p0[:], args=(testimes, testwave))\n",
+      "p1,success = curve_fit(func, testimes, testwave, p0)\n",
       "\n",
       "#plot data and fit together\n",
       "plt.plot(testimes, func(p1, testimes), 'r', testimes, testwave, 'b')\n",
@@ -353,7 +73,9 @@
       "        Tgroup: {3} s\n",
       "        Tphase: {4} s\n",
       "        Successful fit? (1 if yes.) {5}\n",
-      "\"\"\".format(p1[0],p1[1],p1[2],p1[3],p1[4], success))"
+      "\"\"\".format(p1[0],p1[1],p1[2],p1[3],p1[4], success))\n",
+      "\n",
+      "#Now fit to real data\n"
      ],
      "language": "python",
      "metadata": {},
