added citation in powspecwalkthru

--- a/PowSpecWalkthru.ipynb
+++ b/PowSpecWalkthru.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e3924c84057f8afc4d4216f8f5a91ceb7efb97f9662b2a147cfbe2d1603b4494"
+  "signature": "sha256:69c89fd42a57f5697288442eb3facb354038938328919a6ce2f9b9f0796e023d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,6 +21,10 @@
      "metadata": {},
      "source": [
       "<img src=\"https://upload.wikimedia.org/wikipedia/commons/3/37/Shallow_water_waves.gif\"/>\n",
+      "                                    (Taken from https://upload.wikimedia.org.)\n",
+      "\n",
+      "\n",
+      "\n",
       "\n",
       "**Waves look cool.** But did you know that by just looking at surface waves, even when there aren't regular pulses of energy (like those above), you can figure out what's underneath?\n",
       "\n",
