added matplotlib inline magic

--- a/ArtificialWaveletWalkThru.ipynb
+++ b/ArtificialWaveletWalkThru.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1c36b33d23b83fd1d715f6e4ca56a67f022efa946af11c4856bad4bb27d1fa57"
+  "signature": "sha256:3939434956e8104a086d8354a52d20d7fcef3d5041c614a81ae46cc7818570a5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -83,6 +83,8 @@
      "collapsed": false,
      "input": [
       "import numpy as np\n",
+      "import matplotlib.pyplot as plt\n",
+      "%matplotlib inline #This allows us to display plots in the notebook.\n",
       "from scipy.optimize import leastsq, curve_fit"
      ],
      "language": "python",
