added matplotlib inline magic

--- a/PowSpecWalkthru.ipynb
+++ b/PowSpecWalkthru.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:69c89fd42a57f5697288442eb3facb354038938328919a6ce2f9b9f0796e023d"
+  "signature": "sha256:6052ae4ac1835bf81d5fb7c90eb3c618a94ab331a90c62028106dfdfc15a973d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -78,6 +78,7 @@
      "input": [
       "import numpy as np \n",
       "import matplotlib.pyplot as plt\n",
+      "%matplotlib inline #This makes it possible to display plots in the notebook.\n",
       "import scipy.io\n",
       "import glob\n",
       "import os\n",
