--- a/PowSpecWalkthru.ipynb
+++ b/PowSpecWalkthru.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6052ae4ac1835bf81d5fb7c90eb3c618a94ab331a90c62028106dfdfc15a973d"
+  "signature": "sha256:f4b56d16fdef036ebc658f8910e5e1b1cc06426556ba140e8e03ffffbb9e96e7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -78,7 +78,7 @@
      "input": [
       "import numpy as np \n",
       "import matplotlib.pyplot as plt\n",
-      "%matplotlib inline #This makes it possible to display plots in the notebook.\n",
+      "%matplotlib inline \n",
       "import scipy.io\n",
       "import glob\n",
       "import os\n",
